fix overflow glitch from username txt

--- a/src/app/dashboard/channels-userlist/user-list/user-list.component.scss
+++ b/src/app/dashboard/channels-userlist/user-list/user-list.component.scss
@@ -35,5 +35,5 @@ button {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 150px;
+    max-width: 130px;
 }
